<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:padding="16dp"
    tools:context="com.itea.grey.lesson2.MainActivity">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckBox"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp">


        <TextView
            android:id="@+id/helloTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hAgain"
            android:ems="30"
            android:gravity="center_horizontal"
            android:paddingBottom="32dp"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/sInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sInUs"
            android:inputType="textCapCharacters"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="24dp">

      <Button
          android:id="@+id/gButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:background="#e13719"
          android:drawableLeft="@mipmap/google_end"
          android:inputType="textCapCharacters"
          android:text="@string/google"
          android:textSize="20sp"
          />

        <Button
            android:id="@+id/fButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#3c5a99"
            android:drawableLeft="@mipmap/facebook"
            android:inputType="textCapCharacters"
            android:text="@string/facebook"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingBottom="15dp">

       <View
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:layout_gravity="center"
           android:layout_weight="3"
           android:background="@android:color/darker_gray" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_weight="5"
           android:gravity="center_horizontal"
           android:text="@string/text_OR" />

       <View
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:layout_gravity="center"
           android:layout_weight="3"
           android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="45dp">

        <EditText
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hLogin"
            android:inputType="textEmailAddress"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/passText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hPasswd"
            android:inputType="numberPassword"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#32CD32"
            android:inputType="textCapCharacters"
            android:textSize="20sp"
            android:text="@string/loginButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:ems="5"
            android:text="@string/fPasswd" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/sUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"
            android:inputType="textCapCharacters"
            android:text="@string/sUpButton" />

        <Button
            android:id="@+id/tButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"
            android:inputType="textCapCharacters"
            android:text="@string/tButton" />

    </LinearLayout>
</LinearLayout>
